feat: :art: Se movieron los archivos a carpetas
se movieron los archivos de html y css a carpetas personales para que no sea tan confuso y se vea ordenado

--- a/Proyecto/Html/Coffe.html
+++ b/Proyecto/Html/Coffe.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guias Para Minecraft</title>
-    <link rel="stylesheet" href="./cafe.css">
+    <link rel="stylesheet" href="/Proyecto/Css/cafe.css">
 </head>
 <body>
     <header id="titulo">
         <a class="tienda" href="./Tienda.html">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guias De Minecraft</h1>
         <a class="sesion" href="./Inicio-Sesion.html">Iniciar Sesion</a>
     </header>
@@ -27,9 +27,9 @@
         <h2 class="sub">Despedida</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="./imagenes/despedida.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/despedida.jpg" alt="steve">
                 <p class="texto">Espero que hayas disfrutado de mi pagina aqui abajo tienes un formulario en el que puedes apoyarme comprandome un cafe, adios y espero que vuelvas algun dia!</p>
-                <img class="imagen" src="./imagenes/despedida.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/despedida.jpg" alt="steve">
             </article>
         </section>
         <br><br><br>
