--- a/Proyecto/Html/Ideas-Casa.html
+++ b/Proyecto/Html/Ideas-Casa.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ideas De Casas</title>
-    <link rel="stylesheet" href="./anvil.css">
+    <link rel="stylesheet" href="/Proyecto/Css/anvil.css">
 </head>
 <body>
     <form action="https://www.google.com/search" method="get"></form>
     <header id="titulo">
         <a class="tienda" href="./Tienda.html">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guias De Minecraft</h1>
         <a class="sesion" href="./Inicio-Sesion.html">Iniciar Sesion</a>
     </header>
@@ -29,9 +29,9 @@
         <h2 class="sub">Hola De Nuevo</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="./imagenes/stevem.jpg" alt="hola">
+                <img class="imagen" src="/Proyecto/imagenes/stevem.jpg" alt="hola">
                 <p class="texto">Bienvenido de vuelta! parece que te interesa mi pagina por lo visto que tal si miras los videos de aqui abajo y miras si una casa te gusta quien sabe hasta quiza seas mejor construyendo que yo.</p>
-                <img class="imagen" src="./imagenes/stevem.jpg" alt="test">
+                <img class="imagen" src="/Proyecto/imagenes/stevem.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -39,9 +39,9 @@
         <h2 class="sub">Cabaña Sencilla</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen2" src="./imagenes/Torre.jpg" alt="hola">
+                <img class="imagen2" src="/Proyecto/imagenes/Torre.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/ytdkXfOJ31Q?si=E8dCsa4DKvDpol_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen2" src="./imagenes/Torre.jpg" alt="test">
+                <img class="imagen2" src="/Proyecto/imagenes/Torre.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -49,9 +49,9 @@
         <h2 class="sub">Torre Japonesa</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen3" src="./imagenes/minero.jpg" alt="hola">
+                <img class="imagen3" src="/Proyecto/imagenes/minero.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/Rxm6oMUzwxw?si=PdigfNAgkHHvmKYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen3" src="./imagenes/minero.jpg" alt="test">
+                <img class="imagen3" src="/Proyecto/imagenes/minero.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -59,9 +59,9 @@
         <h2 class="sub">Casa En El Lago</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen4" src="./imagenes/admiracion.jpg" alt="hola">
+                <img class="imagen4" src="/Proyecto/imagenes/admiracion.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/iZMEjNdLBEA?si=JZMbzDrQaf7GOMJD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen4" src="./imagenes/admiracion.jpg" alt="test">
+                <img class="imagen4" src="/Proyecto/imagenes/admiracion.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -69,9 +69,9 @@
         <h2 class="sub">Casa Subterranea</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen5" src="./imagenes/tierra.jpg" alt="hola">
+                <img class="imagen5" src="/Proyecto/imagenes/tierra.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/1EJWn8ls-XM?si=d8qatPyoRVABHxmS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen5" src="./imagenes/tierra.jpg" alt="test">
+                <img class="imagen5" src="/Proyecto/imagenes/tierra.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -79,9 +79,9 @@
         <h2 class="sub">Casa Moderna</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen6" src="./imagenes/Felicidad.jpg" alt="hola">
+                <img class="imagen6" src="/Proyecto/imagenes/Felicidad.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/VYeIzDIcjc4?si=qlvaAjtrYKMHCDsH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen6" src="./imagenes/Felicidad.jpg" alt="test">
+                <img class="imagen6" src="/Proyecto/imagenes/Felicidad.jpg" alt="test">
             </article>
         </section>
 </body>
