--- a/Proyecto/Html/Inicio-Sesion.html
+++ b/Proyecto/Html/Inicio-Sesion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guias Para Minecraft</title>
-    <link rel="stylesheet" href="./tierra.css">
+    <link rel="stylesheet" href="/Proyecto/Css/tierra.css">
 </head>
 <body>
     <header id="titulo">
         <a class="tienda" href="./Tienda.html">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guias De Minecraft</h1>
         <a class="sesion" href="#">Iniciar Sesion</a>
     </header>
@@ -28,9 +28,9 @@
         <h2 class="sub">Bienvenida</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="./imagenes/teclado.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/teclado.jpg" alt="steve">
                 <p class="texto">Hola aquí puedes iniciar sesión en mi página para que estés al tanto de las nuevas cosas!</p>
-                <img class="imagen" src="./imagenes/teclado.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/teclado.jpg" alt="steve">
             </article>
         </section>
         <br><br><br>
