--- a/Proyecto/Html/Registro.html
+++ b/Proyecto/Html/Registro.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guías Para Minecraft</title>
-    <link rel="stylesheet" href="./roca.css">
+    <link rel="stylesheet" href="/Proyecto/Css/roca.css">
 </head>
 <body>
     <header id="titulo">
         <a class="tienda" href="./Tienda.html">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guías De Minecraft</h1>
         <a class="sesion" href="./Inicio-Sesion.html">Iniciar Sesion</a>
     </header>
@@ -28,9 +28,9 @@
         <h2 class="sub">Registro</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="imagenes/registro.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/registro.jpg" alt="steve">
                 <p class="texto">Bienvenido Aqui puedes registrarte asi podras ingresar a mi Pagina</p>
-                <img class="imagen" src="imagenes/registro.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/registro.jpg" alt="steve">
             </article>
         </section>
         <br><br><br>
