--- a/Proyecto/Html/Tienda.html
+++ b/Proyecto/Html/Tienda.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda De Minecraft</title>
-    <link rel="stylesheet" href="./esmeralda.css">
+    <link rel="stylesheet" href="/Proyecto/Css/esmeralda.css">
 </head>
 <body>
     <header id="titulo">
         <a class="tienda" href="#">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guias De Minecraft</h1>
         <a class="sesion" href="./Inicio-Sesion.html">Iniciar Sesion</a>
     </header>
@@ -29,9 +29,9 @@
         <h2 class="sub">Un Video Mas Mi Gente</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="./imagenes/tiendita.jpg" alt="hola">
+                <img class="imagen" src="/Proyecto/imagenes/tiendita.jpg" alt="hola">
                 <p class="texto">Hola aquí puedes encontrar items relacionados con el juego por si quieres comprar uno y tenerlo como recuerdo.</p>
-                <img class="imagen" src="./imagenes/tiendita.jpg" alt="test">
+                <img class="imagen" src="/Proyecto/imagenes/tiendita.jpg" alt="test">
             </article>
         </section>
         <br><br><br>
@@ -39,14 +39,14 @@
         <h2 class="sub">Tarjeta De Regalo</h2>
         <section class="caja">
             <article class="contenido2">
-                <img class="imagen2" src="./imagenes/regalo.jpg" alt="test">
+                <img class="imagen2" src="/Proyecto/imagenes/regalo.jpg" alt="test">
                 <p class="texto2">
-                    <img class="Tarjeta" src="./imagenes/Tarjeta.webp" alt="tarjeta">Nombre: Tarjeta De Minecraft
+                    <img class="Tarjeta" src="/Proyecto/imagenes/Tarjeta.webp" alt="tarjeta">Nombre: Tarjeta De Minecraft
                     <br>Precio: 90000
                     <br><br><br><br>
                     <button class="boton" onclick="tienda.agregarProducto('Tarjeta De Minecraft', 90000)">Añadir</button>
                 </p>
-                <img class="imagen2" src="./imagenes/regalo.jpg" alt="test">
+                <img class="imagen2" src="/Proyecto/imagenes/regalo.jpg" alt="test">
             </article>
         </section>
         <br><br><br>
@@ -54,14 +54,14 @@
         <h2 class="sub">Peluche De Creeper</h2>
         <section class="caja">
             <article class="contenido2">
-                <img class="imagen3" src="./imagenes/creeper.jpg" alt="test">
+                <img class="imagen3" src="/Proyecto/imagenes/creeper.jpg" alt="test">
                 <p class="texto2">
-                    <img class="Peluche" src="./imagenes/Peluche.jpg" alt="creeper">Nombre: Peluche De Creeper
+                    <img class="Peluche" src="/Proyecto/imagenes/Peluche.jpg" alt="creeper">Nombre: Peluche De Creeper
                     <br>Precio: 50000
                     <br><br><br><br>
                     <button class="boton" onclick="tienda.agregarProducto('Peluche De Creeper', 50000)">Añadir</button>
                 </p>
-                <img class="imagen3" src="./imagenes/creeper.jpg" alt="test">   
+                <img class="imagen3" src="/Proyecto/imagenes/creeper.jpg" alt="test">   
             </article>
         </section>
         <br><br><br>
@@ -69,14 +69,14 @@
         <h2 class="sub">Camiseta Estampada</h2>
         <section class="caja">
             <article class="contenido2">
-                <img class="imagen4" src="./imagenes/camisilla.jpg" alt="test">
+                <img class="imagen4" src="/Proyecto/imagenes/camisilla.jpg" alt="test">
                 <p class="texto2">
-                    <img class="Camisa" src="./imagenes/camiseta.jpg" alt="camisa">Nombre: Camiseta Estampada De Minecraft
+                    <img class="Camisa" src="/Proyecto/imagenes/camiseta.jpg" alt="camisa">Nombre: Camiseta Estampada De Minecraft
                     <br>Precio: 45000
                     <br><br><br><br>
                     <button class="boton" onclick="tienda.agregarProducto('Camiseta Estampada', 45000)">Añadir</button>
                 </p>
-                <img class="imagen4" src="./imagenes/camisilla.jpg" alt="test">
+                <img class="imagen4" src="/Proyecto/imagenes/camisilla.jpg" alt="test">
             </article>
         </section>
         <br><br><br>
