--- a/Proyecto/Html/Guias-Minecraft.html
+++ b/Proyecto/Html/Guias-Minecraft.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guias Para Minecraft</title>
-    <link rel="stylesheet" href="./warden.css">
+    <link rel="stylesheet" href="/Proyecto/Css/warden.css">
 </head>
 <body>
 <form action="https://www.google.com/search" method="get">
     <header id="titulo">
         <a class="tienda" href="./Tienda.html">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guias De Minecraft</h1>
         <a class="sesion" href="./Inicio-Sesion.html">Iniciar Sesion</a>
     </header>
@@ -29,27 +29,27 @@
         <h2 class="sub">Introduccion</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="./imagenes/steve.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/steve.jpg" alt="steve">
                 <p class="texto">Buenas! Bienvenido a esta pagina de minecraft en donde encontraras guias sobre el juego,guias de mecanicas y tambien guias de como hacer granjas y casas bonitas recuerda que puedes apoyarme en Coffe.</p>
-                <img class="imagen" src="./imagenes/steve.jpg" alt="steve">
+                <img class="imagen" src="/Proyecto/imagenes/steve.jpg" alt="steve">
             </article>
         </section>
         <br><br><br>
         <h2 class="sub">¿Que Es Minecraft?</h2>
         <section class="caja">
             <article class="contenido2">
-                <img class="imagen2" src="./imagenes/pensando.jpg" alt="pensando">
+                <img class="imagen2" src="/Proyecto/imagenes/pensando.jpg" alt="pensando">
                 <p class="texto2">Minecraft es un videojuego de construccion de tipo «mundo abierto» o en ingles sandbox creado originalmente por el sueco Markus Persson (conocido comunmente como «Notch»), que creo posteriormente Mojang Studios (actualmente parte de Microsoft).1920   Esta programado en el lenguaje de programacion Java para la version Java Edition y posteriormente desarrollado en C++ para la version de Bedrock Edition.Fue lanzado el 17 de mayo de 2009, y despues de numerosos cambios, su primera version estable «1.0» fue publicada el 18 de noviembre de 2011.</p>
-                <img class="imagen2" src="./imagenes/mine.jpg" alt="minecraft">
+                <img class="imagen2" src="/Proyecto/./imagenes/mine.jpg" alt="minecraft">
             </article>
         </section>
         <br><br><br>
         <h2 class="sub">Video Sobre El Juego</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen3" src="./imagenes/wojak.png" alt="wojak">
+                <img class="imagen3" src="/Proyecto/imagenes/wojak.png" alt="wojak">
                 <iframe class="video" width="1260" height="300" src="https://www.youtube.com/embed/MmB9b5njVbA?si=igCqWdIzjIbEdJqr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen3" src="./imagenes/wojak.png" alt="wojak">
+                <img class="imagen3" src="/Proyecto/imagenes/wojak.png" alt="wojak">
             </article>
         </section>
     </main>
