--- a/Proyecto/Html/Guias.html
+++ b/Proyecto/Html/Guias.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guias</title>
-    <link rel="stylesheet" href="./zombie.css">
+    <link rel="stylesheet" href="/Proyecto/Css/zombie.css">
 </head>
 <body>
     <form action="https://www.google.com/search" method="get"></form>
     <header id="titulo">
         <a class="tienda" href="./Tienda.html">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guias De Minecraft</h1>
         <a class="sesion" href="./Inicio-Sesion.html">Iniciar Sesion</a>
     </header>
@@ -29,9 +29,9 @@
         <h2 class="sub">Bienvenido</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="./imagenes/señalando.jpg" alt="hola">
+                <img class="imagen" src="/Proyecto/imagenes/señalando.jpg" alt="hola">
                 <p class="texto">Hola! Bienvenido a la seccion de guias aqui encontraras todos lo necesario para poder entender algunas de las mecanicas que minecraft nos presenta como tambien pasar de ser un novato en el juego a alguien que si sabe como defenderse.</p>
-                <img class="imagen" src="./imagenes/señalando.jpg" alt="test">
+                <img class="imagen" src="/Proyecto/imagenes/señalando.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -39,9 +39,9 @@
         <h2 class="sub">Guia Para Principiantes</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen2" src="./imagenes/comienzo.jpg" alt="hola">
+                <img class="imagen2" src="/Proyecto/imagenes/comienzo.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/u1NoPGjAG78?si=iw8FU5ed_nA1XDki" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen2" src="./imagenes/comienzo.jpg" alt="test">
+                <img class="imagen2" src="/Proyecto/imagenes/comienzo.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -49,9 +49,9 @@
         <h2 class="sub">Guia Sobre yunque</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen3" src="./imagenes/yunque.jpg" alt="hola">
+                <img class="imagen3" src="/Proyecto/imagenes/yunque.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/dhR8cPksjhY?si=_bWZS01pLCa0aEqy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen3" src="./imagenes/yunque.jpg" alt="test">
+                <img class="imagen3" src="/Proyecto/imagenes/yunque.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -59,9 +59,9 @@
         <h2 class="sub">Guia Sobre Pociones</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen4" src="./imagenes/pociones.jpg" alt="hola">
+                <img class="imagen4" src="/Proyecto/imagenes/pociones.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/HdsP01WiIkU?si=b33J8gRHUkALGaxY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen4" src="./imagenes/pociones.jpg" alt="test">
+                <img class="imagen4" src="/Proyecto/imagenes/pociones.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -69,9 +69,9 @@
         <h2 class="sub">Guia Sobre Los Aldeanos</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen5" src="./imagenes/aldeanos.jpg" alt="hola">
+                <img class="imagen5" src="/Proyecto/imagenes/aldeanos.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/CPHLPGiu2QU?si=7kpk6M38cgg5dDyD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen5" src="./imagenes/aldeanos.jpg" alt="test">
+                <img class="imagen5" src="/Proyecto/imagenes/aldeanos.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -79,9 +79,9 @@
         <h2 class="sub">Guia Sobre Enemigos</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen6" src="./imagenes/mobs.jpg" alt="hola">
+                <img class="imagen6" src="/Proyecto/imagenes/mobs.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/9ru-xCB70_Y?si=CuuWnJsz2dxCVELQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen6" src="./imagenes/mobs.jpg" alt="test">
+                <img class="imagen6" src="/Proyecto/imagenes/mobs.jpg" alt="test">
             </article>
         </section>
 </body>
