--- a/Proyecto/Html/Ideas-Granjas.html
+++ b/Proyecto/Html/Ideas-Granjas.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ideas De Casas</title>
-    <link rel="stylesheet" href="./redstone.css">
+    <link rel="stylesheet" href="/Proyecto/Css/redstone.css">
 </head>
 <body>
     <form action="https://www.google.com/search" method="get"></form>
     <header id="titulo">
         <a class="tienda" href="./Tienda.html">Tienda</a>
-        <img class="logo" src="./imagenes/logo.png" alt="logo">
+        <img class="logo" src="/Proyecto/imagenes/logo.png" alt="logo">
         <h1>Guias De Minecraft</h1>
         <a class="sesion" href="./Inicio-Sesion.html">Iniciar Sesion</a>
     </header>
@@ -29,9 +29,9 @@
         <h2 class="sub">Hola Por Ultima Vez</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen" src="./imagenes/granja.jpg" alt="hola">
+                <img class="imagen" src="/Proyecto/imagenes/granja.jpg" alt="hola">
                 <p class="texto">Nos volvemos a encontrar mi querido usuario...Estas preparado para los videos que veras a continuacion y entender porfin minecraft?. Tranquilo las granjas son faciles de hacer y bastante divertidas!</p>
-                <img class="imagen" src="./imagenes/granja.jpg" alt="test">
+                <img class="imagen" src="/Proyecto/imagenes/granja.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -39,9 +39,9 @@
         <h2 class="sub">Granja De Mobs</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen2" src="./imagenes/lloviendo.jpg" alt="hola">
+                <img class="imagen2" src="/Proyecto/imagenes/lloviendo.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/E4wp3JTnlwQ?si=nq4UAYpVc67I9NQ5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen2" src="./imagenes/lloviendo.jpg" alt="test">
+                <img class="imagen2" src="/Proyecto/imagenes/lloviendo.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -49,9 +49,9 @@
         <h2 class="sub">Granja De Hierro</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen3" src="./imagenes/golem.jpg" alt="hola">
+                <img class="imagen3" src="/Proyecto/imagenes/golem.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/M2T0FFefAM0?si=WLqGUsGJ5_djxat9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen3" src="./imagenes/golem.jpg" alt="test">
+                <img class="imagen3" src="/Proyecto/imagenes/golem.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -59,9 +59,9 @@
         <h2 class="sub">Granja De Enderman</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen4" src="./imagenes/Enderman.jpg" alt="hola">
+                <img class="imagen4" src="/Proyecto/imagenes/Enderman.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/Kvyvv5Du6vU?si=wINgI71wxtwoh19n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen4" src="./imagenes/Enderman.jpg" alt="test">
+                <img class="imagen4" src="/Proyecto/imagenes/Enderman.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -69,9 +69,9 @@
         <h2 class="sub">Granja De Oro</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen5" src="./imagenes/oro.jpg" alt="hola">
+                <img class="imagen5" src="/Proyecto/imagenes/oro.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/YVRpq9F0VgE?si=xMYoI4J7nYLTQ1AL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen5" src="./imagenes/oro.jpg" alt="test">
+                <img class="imagen5" src="/Proyecto/imagenes/oro.jpg" alt="test">
             </article>
         </section>
     <br><br><br>
@@ -79,9 +79,9 @@
         <h2 class="sub">Granja De Totems</h2>
         <section class="caja">
             <article class="contenido">
-                <img class="imagen6" src="./imagenes/Totem.jpg" alt="hola">
+                <img class="imagen6" src="/Proyecto/imagenes/Totem.jpg" alt="hola">
                 <iframe class="video" width="1265" height="300" src="https://www.youtube.com/embed/wvr87SfEP-4?si=zSW23yLMpx7NicnA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <img class="imagen6" src="./imagenes/Totem.jpg" alt="test">
+                <img class="imagen6" src="/Proyecto/imagenes/Totem.jpg" alt="test">
             </article>
         </section>
 </body>
